@@ -1,9 +1,8 @@
 /********************************************************************
  * COPYRIGHT:
- * Copyright (c) 2003-2003, International Business Machines Corporation and
+ * Copyright (c) 2003-2008, International Business Machines Corporation and
  * others. All Rights Reserved.
  ********************************************************************/
 
 void TestUScriptCodeAPI(void);
-
-
+void TestBinaryValues(void);
